--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div>
                         <select class="select-font" name="font-name" id="" onchange="onSetFont(this.value)">
                             <option value="Impact">Impact</option>
-                            <option value="Ariel">Ariel</option>
+                            <option value="Arial">Arial</option>
                             <option value="Times New Roman">Times</option>
                             <option value="Courier">Courier</option>
                         </select>
